clusters/talos-cluster/searxng/flaresolverr-adapter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-flaresolverr-adapter
  namespace: searxng
spec:
  selector:
    app: searxng-flaresolverr-adapter
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
